recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:20: error: reassignment to val
    steps=steps+1
         ^